完善：后台界面优化

--- a/Application/Admin/View/Index/index.html
+++ b/Application/Admin/View/Index/index.html
@@ -14,7 +14,7 @@
 
 <block name="container">
     <div class="container">
-        <div class="dashboard">
+        <div id="dashboard">
             <div class="row">
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="panel panel-default">
