--- a/Addons/SyncLogin/View/default/reg.html
+++ b/Addons/SyncLogin/View/default/reg.html
@@ -44,7 +44,7 @@
                                 </div>
                             </div>
                             <div class="form-group">
-                                <input type="hidden" name="reg_type" value="3">
+                                <input type="hidden" name="reg_type" value="{$user_sns_info.type.strtolower}">
                                 <input type="hidden" name="avatar" value="{$user_sns_info.head}">
                                 <button type="submit" class="btn btn-success btn-block ajax-post" target-form="reg-form">注 册</button>
                             </div>
