--- a/Application/Admin/View/Public/login.html
+++ b/Application/Admin/View/Public/login.html
@@ -63,7 +63,7 @@
     </div>
 
     <div class="bottom navbar-fixed-bottom text-center">
-        <span class="padding-right">Powered by {:C('PRODUCT_NAME')} v{:C('CURRENT_VERSION')}</span>
+        <span>Powered by {:C('PRODUCT_NAME')} v{:C('CURRENT_VERSION')}</span>
         <span>Copyright © <a href="{:C('WEBSITE_DOMAIN')}" target="_blank">{:C('COMPANY_NAME')}</a> All rights reserved.</span>
         <script src="__PUBLIC__/libs/particles/particles.min.js"></script>
         <script src="__PUBLIC__/js/admin.js?v={:C('STATIC_VERSION')}"></script>
