优化：后台样式及Builder样式 删除：配置文件中的注册方式列表 优化：ListBuilder搜索

--- a/Application/Admin/View/_Layout/_main.less
+++ b/Application/Admin/View/_Layout/_main.less
@@ -17,6 +17,12 @@
             display: none;
         }
     }
+    #main {
+        .footer {
+            padding: 5px 10px;
+            background: #f5f5f5;
+        }
+    }
 }
 //侧边导航隐藏标题时样式
 .title-hide {
