--- a/Application/Common/Builder/_builder.less
+++ b/Application/Common/Builder/_builder.less
@@ -12,13 +12,22 @@
                 color: @gray;
             }
         }
-        .pagination {
-            margin: 0;
-        }
     }
 }
 //
 // Builder列表样式
+.builder {
+    .builder-container {
+        .builder-table {
+            .panel {
+                margin-bottom: 0px;
+            }
+        }
+        .pagination {
+            margin-bottom: 0px;
+        }
+    }
+}
 @media (max-width: 768px){
     .builder-list-toolbar {
         .button-list {
