--- a/Application/Home/View/default/_Resource/gulp/home.less
+++ b/Application/Home/View/default/_Resource/gulp/home.less
@@ -78,6 +78,7 @@
 @import (less) "../../../../../../Public/libs/jquery_huploadify/Huploadify.css";
 @import "../../../../../../Public/libs/jquery_tokeninput/css/token-input-bootstrap.less";
 @import (less) "../../../../../../Public/libs/bootstrap_daterangepicker/daterangepicker.css";
+@import (less) "../../../../../../Public/libs/bootstrap_star_rating/css/star-rating.css";
 //
 //
 //
