--- a/Application/Admin/View/Datebase/export.html
+++ b/Application/Admin/View/Datebase/export.html
@@ -1,51 +1,54 @@
 <extend name="_Layout/main"/>
 
 <block name="main">
-    <div class="toolbar margin-bottom">
+    <!-- 工具栏按钮 -->
+    <div class="toolbar" style="margin-bottom:20px;">
         <a id="export" class="btn btn-primary" href="javascript:;" autocomplete="off">立即备份</a>
         <a id="optimize" class="btn btn-warning" href="{:U('optimize')}">优化表</a>
         <a id="repair" class="btn btn-danger" href="{:U('repair')}">修复表</a>
     </div>
+
     <!-- 数据列表 -->
     <div class="data-table">
         <form id="export-form" method="post" action="{:U('do_export')}">
-            <table class="table table-hover">
-                <thead>
-                    <tr>
-                        <th><input class="check-all" checked="chedked" type="checkbox" value=""></th>
-                        <th>表名</th>
-                        <th class="hidden-xs">数据量</th>
-                        <th class="hidden-xs">数据大小</th>
-                        <th class="hidden-xs">创建时间</th>
-                        <th width="160">备份状态</th>
-                        <th width="120">操作</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <volist name="list" id="table">
+            <div class="panel panel-default">
+                <table class="table table-bordered table-responsive table-striped table-hover">
+                    <thead>
                         <tr>
-                            <td class="num"><input class="ids" checked="chedked" type="checkbox" name="tables[]" value="{$table.name}"></td>
-                            <td>{$table.name}</td>
-                            <td class="hidden-xs">{$table.rows}</td>
-                            <td class="hidden-xs">{$table.data_length}</td>
-                            <td class="hidden-xs">{$table.create_time}</td>
-                            <td class="back-status">未备份</td>
-                            <td class="action">
-                                <a class="btn btn-xs btn-warning ajax-get no-refresh" href="{:U('optimize?tables='.$table['name'])}">优化表</a>
-                                <a class="btn btn-xs btn-danger ajax-get no-refresh" href="{:U('repair?tables='.$table['name'])}">修复表</a>
-                            </td>
+                            <th><input class="check-all" checked="chedked" type="checkbox" value=""></th>
+                            <th>表名</th>
+                            <th class="hidden-xs">数据量</th>
+                            <th class="hidden-xs">数据大小</th>
+                            <th class="hidden-xs">创建时间</th>
+                            <th width="160">备份状态</th>
+                            <th width="120">操作</th>
                         </tr>
-                    </volist>
-                </tbody>
-            </table>
+                    </thead>
+                    <tbody>
+                        <volist name="list" id="table">
+                            <tr>
+                                <td class="num"><input class="ids" checked="chedked" type="checkbox" name="tables[]" value="{$table.name}"></td>
+                                <td>{$table.name}</td>
+                                <td class="hidden-xs">{$table.rows}</td>
+                                <td class="hidden-xs">{$table.data_length}</td>
+                                <td class="hidden-xs">{$table.create_time}</td>
+                                <td class="back-status">未备份</td>
+                                <td class="action">
+                                    <a class="btn btn-xs btn-warning ajax-get no-refresh" href="{:U('optimize?tables='.$table['name'])}">优化表</a>
+                                    <a class="btn btn-xs btn-danger ajax-get no-refresh" href="{:U('repair?tables='.$table['name'])}">修复表</a>
+                                </td>
+                            </tr>
+                        </volist>
+                    </tbody>
+                </table>
+            </div>
         </form>
     </div>
-    <!-- /数据列表 -->
 </block>
 
 <block name="script">
     <script type="text/javascript">
-        $(function(){
+        $(function() {
             var $form = $("#export-form"), $export = $("#export"), tables, $optimize = $("#optimize"), $repair = $("#repair");
             $optimize.add($repair).click(function(){
                 $.post(this.href, $form.serialize(), function(data){
@@ -69,7 +72,12 @@
                 return false;
             });
 
-            $export.click(function(){
+            $export.click(function() {
+                if ($(this).hasClass('confirm')) {
+                    if (!confirm('确认要执行该操作吗?')) {
+                        return false;
+                    }
+                }
                 $export.parent().children().addClass("disabled");
                 $export.html("正在发送备份请求...");
                 $.post(
@@ -97,7 +105,7 @@
                 return false;
             });
 
-            function backup(tab, status){
+            function backup(tab, status) {
                 status && showmsg(tab.id, "开始备份...(0%)");
                 $.get($form.attr("action"), tab, function(data){
                     if(data.status){
@@ -124,7 +132,7 @@
                 }, "json");
             }
 
-            function showmsg(id, msg){
+            function showmsg(id, msg) {
                 $form.find("input[value=" + tables[id] + "]").closest("tr").find(".back-status").html(msg);
             }
         });
