--- a/Application/Home/View/default/_Resource/gulp/home.less
+++ b/Application/Home/View/default/_Resource/gulp/home.less
@@ -74,7 +74,7 @@
 //
 //
 // 引入第三方类库样式 (不需要定义less变量) ===================================================
-@import (less) "../../../../../../Public/libs/bootstrap_extend/css/bootstrap.extend.css";
+@import (less) "../../../../../../Public/libs/bootstrap_extend/css/bootstrap-extend.css";
 @import (less) "../../../../../../Public/libs/jquery_huploadify/Huploadify.css";
 @import "../../../../../../Public/libs/jquery_tokeninput/css/token-input-bootstrap.less";
 @import (less) "../../../../../../Public/libs/bootstrap_daterangepicker/daterangepicker.css";
