--- a/Application/Install/View/Index/step3.html
+++ b/Application/Install/View/Index/step3.html
@@ -34,7 +34,18 @@
                     <div class="form-group">
                         <label class="control-label">数据库名</label>
                         <div class="control-group">
-                            <input class="form-control" type="text" name="db[DB_NAME]" value="corethink_{$rand}">
+                            <input class="form-control" type="text" name="db[DB_NAME]" value="corethink">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label">是否覆盖同名数据库</label>
+                        <div class="control-group">
+                            <label class="radio-inline" for="cover0">
+                                <input type="radio" id="cover0" class="radio" name="cover" value="0" checked="checked"> 不覆盖
+                            </label>
+                            <label class="radio-inline" for="cover1">
+                                <input type="radio" id="cover1" class="radio" name="cover" value="1"> 覆盖
+                            </label>
                         </div>
                     </div>
                     <div class="form-group">
