--- a/Application/Common/Builder/_builder.less
+++ b/Application/Common/Builder/_builder.less
@@ -12,6 +12,9 @@
                 color: @gray;
             }
         }
+        .submit, .return {
+            min-width: 120px;
+        }
     }
 }
 //
