--- a/Application/Home/View/default/Document/detail_page_default.html
+++ b/Application/Home/View/default/Document/detail_page_default.html
@@ -1,5 +1,13 @@
 <extend name="_Layout/main"/>
 
+<block name="style">
+    <style type="text/css">
+        .main-nav {
+            margin-bottom: 0px;
+        }
+    </style>
+</block>
+
 <block name="breadcrumb"></block>
 
 <block name="jumbotron">
@@ -11,7 +19,7 @@
     </div>
 </block>
 
-<block name="body">
+<block name="main">
     <div class="container">
         <div class="row">
             <div class="col-xs-12 col-sm-9">
@@ -47,6 +55,11 @@
                             </div>
                         </div>
                     </corethink:category_list>
+                </div>
+
+                <!-- 页面侧边栏钩子 -->
+                <div class="clearfix hook hook-page-side">
+                    {:hook('PageSide')}
                 </div>
             </div>
         </div>
