--- a/Addons/SyncLogin/View/default/reg.html
+++ b/Addons/SyncLogin/View/default/reg.html
@@ -10,7 +10,7 @@
     </div>
 </block>
 
-<block name="body">
+<block name="main">
     <div class="container">
         <div class="row">
             <div class="col-xs-12 col-md-6 box">
