--- a/Application/Admin/View/_Layout/main.html
+++ b/Application/Admin/View/_Layout/main.html
@@ -4,29 +4,25 @@
     <meta charset="utf-8">
     <title>{$meta_title}｜{:C('WEB_SITE_TITLE')}后台管理</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <meta name="renderer" content="webkit">
+    <meta name="renderer" content="webkit|ie-comp|ie-stand">
     <meta name="author" content="{:C('WEB_SITE_TITLE')}">
     <meta name="keywords" content="{$meta_keywords}">
     <meta name="description" content="{$meta_description}">
     <meta name="generator" content="CoreThink">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-title" content="{:C('WEB_SITE_TITLE')}">
+    <meta name="format-detection" content="telephone=no,email=no">
     <link rel="apple-touch-icon" type="image/x-icon" href="__ROOT__/favicon.ico">
     <link rel="shortcut icon" type="image/x-icon" href="__ROOT__/favicon.ico">
 
     <link rel="stylesheet" type="text/css" href="__PUBLIC__/css/admin.css?v={:C('STATIC_VERSION')}">
     <link rel="stylesheet" type="text/css" href="__ADMIN_CSS__/{:C('ADMIN_THEME')}.css">
     <block name="style"></block>
-    <script src="__PUBLIC__/libs/jquery/1.x/jquery-1.11.3.min.js"></script>
+    <script type="text/javascript" src="__PUBLIC__/libs/jquery/1.x/jquery-1.11.3.min.js"></script>
     <block name="libs"></block>
 </head>
 
-<?php
-    $CONTROLLER_NAME = strtolower($Think.CONTROLLER_NAME);
-    $ACTION_NAME = strtolower($Think.ACTION_NAME);
-?>
-
-<body id="<?php echo 'body-'.$CONTROLLER_NAME.'-'.$ACTION_NAME; ?>" class="<?php echo 'body-'.$CONTROLLER_NAME.' body-'.$CONTROLLER_NAME.'-'.$ACTION_NAME; ?>">
+<body id="<?php echo 'body-'.$__CONTROLLER_NAME__.'-'.$__ACTION_NAME__; ?>" class="<?php echo 'body-'.$__CONTROLLER_NAME__.' body-'.$__CONTROLLER_NAME__.'-'.$__ACTION_NAME__; ?>">
     <div class="clearfix full-header">
         <div class="navbar navbar-inverse" role="navigation">
             <div class="container-fluid">
@@ -147,7 +143,7 @@
                     var $universalObject{$Think.CONTROLLER_NAME} = {<block name='universal'></block>};
                 </script>
             </div>
-            <script src="__PUBLIC__/js/admin.js?v={:C('STATIC_VERSION')}"></script>
+            <script type="text/javascript" src="__PUBLIC__/js/admin.js?v={:C('STATIC_VERSION')}"></script>
             <block name="script"></block>
         </div>
     </div>
