--- a/Application/Home/View/default/Document/index_manual.html
+++ b/Application/Home/View/default/Document/index_manual.html
@@ -4,6 +4,9 @@
     <style type="text/css">
         /* 文档页面结构样式
         -------------------------------------------------- */
+        .manual-nav {
+            margin-bottom: 0px;
+        }
         .manual-box {
             margin-top: 15px;
             padding-bottom: 80px;
@@ -156,8 +159,10 @@
 
 <block name="jumbotron"></block>
 
+<block name="top-nav"></block>
+
 <block name="main-nav">
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <nav class="manual-nav navbar navbar-inverse navbar-static-top" role="navigation">
         <div class="container-fluid">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse-main">
@@ -209,10 +214,10 @@
 
 <block name="breadcrumb"></block>
 
-<block name="body">
+<block name="main">
     <div class="manual-box container-fluid clearfix">
         <!-- 文档搜索 -->
-        <div class="col-xs-12 col-sm-2 search margin-bottom">
+        <div class="col-xs-12 col-sm-2 search">
             <input class="form-control" id="search" type="search" placeholder=" 这个搜索是假的...">
         </div>
         <!-- 文档左侧树状目录结构 -->
@@ -225,9 +230,7 @@
             <header class="margin-bottom">
                 <h1 id="manual-title">序言</h1>
                 <div class="copylink">
-                    <a href="javascript:;" class=""><span class="fa fa-copy"></span>复制本页链接</a>
-                    <div class="zclip" id="zclip-ZeroClipboardMovie_1" style="position: absolute; left: 0px; top: 5px; width: 114px; height: 21px; z-index: 99;">
-                    </div>
+                    <a href="javascript:;" class=""><span class="fa fa-copy"></span> 复制本页链接</a>
                 </div>
                 <div class="title-link"></div>
             </header>
@@ -240,12 +243,12 @@
 </block>
 
 <block name="footer">
-    <footer class="footer navbar-fixed-bottom border-top">
+    <footer class="footer navbar-fixed-bottom">
         <div class="container">
-            <div class="row padding-top">
-                <ul class="list-inline text-center">
+            <div class="row">
+                <ul class="copyright list-inline text-center">
                     <li>{:C('WEB_SITE_COPYRIGHT')}</li>
-                    <li><a class="padding-left border-left" href="http://www.miibeian.gov.cn/" target="_blank">{:C('WEB_SITE_ICP')}</a></li>
+                    <li><a class="icp" href="http://www.miibeian.gov.cn/" target="_blank">{:C('WEB_SITE_ICP')}</a></li>
                     <li><a href="{:C('WEBSITE_DOMAIN')}" title="轻量级WEB产品开发框架"><span class="label label-default">CorerThink</span></a></li>
                 </ul>
             </div>
