--- a/Application/Home/View/default/Index/index.html
+++ b/Application/Home/View/default/Index/index.html
@@ -9,11 +9,6 @@
         .main-nav {
             margin-bottom: 0px;
         }
-        @media (max-width: 768px) {
-            #my-slide .btn {
-                margin-bottom: 8px;
-            }
-        }
         #my-slide {
             margin-bottom: 20px;
         }
@@ -27,13 +22,24 @@
         #my-slide .slider2 .btn-default-inverse.active {
             color: #047ecc;
         }
-        .feature .thumbnail .lazy{
+        .feature-title {
+            margin-bottom: 15px;
+        }
+        .feature-list .thumbnail .lazy{
             width: 100%;
             height: 126px;
         }
-        .feature .thumbnail .caption p{
-            height: 60px;
+        .feature-list .thumbnail .caption p{
+            height: 80px;
             overflow: hidden;
+        }
+        @media (max-width: 768px) {
+            #my-slide .btn {
+                margin-bottom: 8px;
+            }
+            .feature-list .thumbnail .caption p{
+                height: auto;
+            }
         }
     </style>
 </block>
@@ -110,10 +116,10 @@
     </div>
 </block>
 
-<block name="body">
+<block name="main">
     <div class="container">
-        <a class="btn btn-info btn-block">特性</a>
-        <div class="row feature">
+        <a class="btn btn-info btn-block feature-title">特性</a>
+        <div class="row feature-list">
             <div class="col-xs-12 col-sm-4 col-md-3">
                 <div class="thumbnail">
                     <a href="#"><img class="lazy" data-original="__HOME_IMG__/index01.png"></a>
@@ -194,7 +200,7 @@
             </div>
             <div class="col-xs-12 col-sm-4 col-md-3">
                 <div class="thumbnail">
-                    <a href="#"><img class="lazy" data-original="__IMG__/index07.png"></a>
+                    <a href="#"><img class="lazy" data-original="__HOME_IMG__/index07.png"></a>
                     <div class="caption">
                         <h3 class="text-center">
                             <a href="#">快速迭代<br><small>敏捷开发</small></a>
