--- a/Application/Home/View/default/Tag/index.html
+++ b/Application/Home/View/default/Tag/index.html
@@ -10,7 +10,7 @@
     </div>
 </block>
 
-<block name="body">
+<block name="main">
     <div class="container">
         <div class="cards cards-borderless">
             <volist name="tag_list" id="vo">
