--- a/Application/Home/View/default/User/index.html
+++ b/Application/Home/View/default/User/index.html
@@ -27,7 +27,7 @@
     </div>
 </block>
 
-<block name="body">
+<block name="main">
     <div class="container">
         <div class="row">
             <div class="cards cards-borderless user-list clearfix">
