--- a/Application/Home/View/default/_Builder/formbuilder_addon.html
+++ b/Application/Home/View/default/_Builder/formbuilder_addon.html
@@ -11,7 +11,7 @@
     </div>
 </block>
 
-<block name="body">
+<block name="main">
     <div class="container">
         <div class="row">
             <div class="col-xs-12 col-sm-3">
