--- a/Application/Install/View/Index/step4.html
+++ b/Application/Install/View/Index/step4.html
@@ -8,7 +8,7 @@
     <li><a href="javascript:;">完成安装</a></li>
 </block>
 
-<block name="body">
+<block name="main">
     <div class="col-xs-12 col-sm-8 col-sm-offset-2">
         <div class="panel panel-default">
             <div class="panel-heading">
