--- a/Application/Common/Builder/_builder.less
+++ b/Application/Common/Builder/_builder.less
@@ -92,4 +92,10 @@
             box-shadow: inset 0 1px 1px red, 0 0 8px red;
         }
     }
+    .board_list {
+        .board {
+            padding: 0px;
+            margin-right: 10px;
+        }
+    }
 }
