--- a/Application/Admin/View/Datebase/import.html
+++ b/Application/Admin/View/Datebase/import.html
@@ -71,11 +71,7 @@
                             window.onbeforeunload = function(){ return null; }
                         }
                     }else{
-                        $.bootstrapGrowl(data.info, {
-                            type: 'danger',
-                            align: 'center',
-                            width: 'auto',
-                        });
+                        alertMessager(data.info, 'danger');
                     }
                 }
             });
